# CI_tutorial

./: LICENSE  README.md  pyproject.toml
data/: active_space_integrals.npz
modules/: Ar_large_rasci.py  Ar_small_casci.py  Pairing.py
modules/misc_utils/: __init__.py  pyscf_tools.py
notebooks/: 00_Ar_CASCI.ipynb  01_Ar_RASCI.ipynb
