[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "CI_tutorial"
version = "0.1.0"
description = "Quantum chemistry CI hands-on materials"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pyscf",
    "numba",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*"]
